# mmathlib

./: .editorconfig  CMakeLists.txt  Makefile  README.md
src/: array.c  array.h  linked_list.c  linked_list.h  main.c  matrix.c  matrix.h  mmath.h  number.c  number.h  types.h  vector.c  vector.h
